# btl_python

./: .env.example  .gitignore  README.md  app.py  config.py  extensions.py  forms.py  models.py  pyproject.toml  requirements.txt  seed.py
instance/: database.db
routes/: __init__.py  admin.py  auth.py  main.py  owner.py
static/css/: style.css
static/js/: react-home.js
templates/: 403.html  404.html  base.html
templates/admin/: bookings.html  dashboard.html  ponds.html  reviews.html  sidebar.html  users.html
templates/auth/: login.html  register.html
templates/main/: booking.html  booking_history.html  index.html  pond_detail.html  pond_list.html
templates/owner/: activities.html  activity_form.html  bookings.html  dashboard.html  fish_type_form.html  fish_types.html  pond_form.html  pond_management.html  promotion_form.html  promotions.html  reports.html  service_form.html
